# chronostasis

./: LICENSE  README.md  docker-compose.yml  pgpassfile  servers.json
backend/: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: lib.rs  logging.rs  main.rs
backend/src/api/: router.rs
backend/src/api/handlers/: get_asset.rs  get_user_by_slug.rs  mod.rs
backend/src/common/: cfg.rs
backend/src/database/: mod.rs
backend/src/database/migrations/: m20240126114845_create_users_table.rs
backend/src/dto/: mod.rs  user_get_dto.rs
backend/src/entities/: users.rs
backend/src/handlers/: get_user_by_slug.rs  mod.rs
backend/src/modules/users/: mod.rs
backend/src/routes/: echo.rs  hello.rs  login.rs  mod.rs
backend/src/services/: asset_service.rs  mod.rs  user_service.rs
backend/src/services/user/: get_user_by_id.rs  get_user_by_slug.rs  mod.rs
backend/tests/: oneforall.rs
frontend/: README.md  components.json  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/inventory/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/authentication/: login-form.tsx  signup-form.tsx
frontend/src/components/inventory/: InventoryFilters.tsx  InventoryGridContainer.tsx  InventoryStats.tsx  inventory-grid-config.ts  inventory-grid.tsx  inventory-item.tsx
frontend/src/components/nav/: app-sidebar.tsx  nav-main.tsx
frontend/src/data/: mockInventory.ts
(+3 files in other folders)
