[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
axum = "0.8.4"
axum-extra = "0.10.1"
hyper = "1.4.1"
tower = { version = "0.5.0", features = [] }
tower-http = { version = "0.6.6", features = [
  "trace",
  "timeout",
  "request-id",
  "cors",
  "normalize-path",
] }

sea-orm = { version = "1.1.12", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "macros",
  "with-chrono",
  "with-json",
  "with-uuid",
  "seaography",
] }

sea-orm-migration = { version = "1.1.12", features = ["runtime-tokio-rustls"] }


reqwest = { version = "0.12.20", default-features = false, features = [
  "json",
  "rustls-tls",
] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.8.0", features = ["v7", "serde"] }
dotenvy = "0.15.7"

anyhow = "1.0.98"
seaography = { version = "~1.1.4", features = [
  "with-decimal",
  "with-chrono",
  "with-postgres-array",
  "with-uuid",
] }
